feat: UsersのAPIの返り値を修正
