# src/main/kotlin/dev/usbharu/hideout/domain/model/hideout/dto/UserResponse.kt
@@ -1,5 +1,7 @@
 package dev.usbharu.hideout.domain.model.hideout.dto
 
+import dev.usbharu.hideout.domain.model.hideout.entity.User
+
 data class UserResponse(
     val id: Long,
     val name: String,
@@ -8,4 +10,18 @@ data class UserResponse(
     val description: String = "",
     val url: String,
     val createdAt: Long
-)
+) {
+    companion object {
+        fun from(user: User): UserResponse {
+            return UserResponse(
+                user.id,
+                user.name,
+                user.domain,
+                user.screenName,
+                user.description,
+                user.url,
+                user.createdAt.toEpochMilli()
+            )
+        }
+    }
+}
